<resources>
    <string name="app_name">Zeebooks</string>
    <string name="button_next_text">Începe aventura</string>
    <string name="button_skip_text">Continuă spre librărie</string>
    <string name="title_one_text">Descoperă lumea cărților</string>
    <string name="title_two_text">O aventură pentru fiecare</string>
    <string name="title_three_text">Cărți pentru dezvoltarea personală</string>
    <string name="title_four_text">Explorează noi lumii</string>
    <string name="description_one_text">Lasă-te învăluit în magia cărților și explorează o varietate de genuri literare,
        de la aventuri și romane de dragoste, până la cărți de dezvoltare personală și non-ficțiune.</string>
    <string name="description_two_text">Indiferent dacă îți place să călătorești în locuri îndepărtate sau să explorezi
        lumea imaginară a personajelor, biblioteca noastră îți oferă o mulțime de cărți care să te ajute să evadezi din cotidian.</string>
    <string name="description_three_text">Cărțile sunt o modalitate excelentă de a-ți dezvolta abilitățile și de a învăța
        lucruri noi. Descoperă cărțile noastre de dezvoltare personală care îți vor oferi inspirație și îți vor ajuta să devii cea mai bună versiune a ta.</string>
    <string name="description_four_text">Descoperă lumi noi prin lectură. Biblioteca noastră este plină de cărți care îți vor
        oferi oportunitatea să explorezi noi culturi și să înțelegi perspective diferite.</string>
    <string name="register_text_title">Înregistrează-te</string>
    <string name="type_input_last_name_text">Nume</string>
    <string name="type_input_first_name_text">Prenume</string>
    <string name="type_input_email_text">Adresa de e-mail</string>
    <string name="type_input_password_text">Parola</string>
    <string name="type_input_confirm_password_text">Confirmă parola</string>
    <string name="create_account_text">Creează cont</string>
    <string name="exist_account_text">Ai deja cont?</string>
    <string name="checkbox_text">Am citit și sunt de acord cu</string>
    <string name="checkbox_terms_text">termenii și condițiile.</string>
    <string name="success_title_popup_register"> Contul tău a fost creat cu succes!</string>
    <string name="success_title_popup_login"> Autentificare finalizată cu succes!</string>
    <string name="success_title_popup_login_admin">Autentificare ca administrator reușită!</string>
    <string name="message_popup">Te rugăm să aștepți câteva momente în timp ce pregătim totul pentru tine.</string>
    <string name="error_title_popup">Credențiale invalide!</string>
    <string name="success_title1_popup_order"> Comandă plasată cu succes!</string>
    <string name="success_title2_popup_order"> Curierul nostru este nerăbdător să livreze comanda ta! </string>
    <string name="success_title3_popup_order"> Stai aproape de telefon și pregătește-te să primești cărțile preferate direct la ușa ta!"</string>
    <string name="success_title4_popup_order"> Așteaptă cu nerăbdare momentul în care telefonul tău va suna, deoarece curierul nostru se va asigura că ajunge la tine în cel mai scurt timp posibil. </string>
    <string name="textErroLastName">Numele este obligatoriu!</string>
    <string name="textErroFirstName">Prenumele este obligatoriu!</string>
    <string name="textErroEmail">Email-ul este obligatoriu!</string>
    <string name="textErroEmailCharacters">Ați introdus o adresă de email invalidă!</string>
    <string name="textErroPassword">Parola este obligatorie!</string>
    <string name="textErroPasswordLength">Parola trebuie să aibă cel puțin 8 caractere!</string>
    <string name="textErrorNumberLength">Numărul trebuie să aibă 10 caractere!</string>
    <string name="textErroNumber">Numărul este obligatoriu!</string>
    <string name="textErroPasswordCharacters">Parola este prea slabă!</string>
    <string name="textErroConfPassword">Confirmarea parolei este obligatorie!</string>
    <string name="textErroConfPasswordIdentical">Parola nu sunt corespunde!</string>
    <string name="login_text_title">Autentifică-te</string>
    <string name="forget_password_text">Ai uitat parola?</string>
    <string name="retine">Reține</string>
    <string name="retinut">Reținut</string>
    <string name="login_account_text">Intră în cont</string>
    <string name="do_not_have_account">Nu ai cont?</string>
    <string name="reset_password">Resetează parola</string>
    <string name="new_password">Parolă nouă</string>
    <string name="save_password">Salvează parola</string>
    <string name="solicita">Solicită</string>
    <string name="type_password_text">Introdu adresa de e-mail pentru a solicita resetarea parolei.</string>
    <string name="search_title">Caută cărți</string>
    <string name="list_books_title">Descoperă acum</string>
    <string name="description_categories_book">Vânează cărțile noi înaintea cititorilor din bibliotecă</string>
    <string name="view_more">vezi toate</string>
    <string name="categories"> Toate categoriile </string>
    <string name="recomandate">Recomandate</string>
    <string name="purchase_now">Cumpără acum</string>
    <string name="votes">Voturi</string>
    <string name="number_of_page">Număr de pagini</string>
    <string name="language">limba</string>
    <string name="year_of_publication">Anul</string>
    <string name="book_description">Descriere</string>
    <string name="view_more_text">vezi mai mult</string>
    <string name="view_less_text">vezi mai puțin</string>
    <string name="ratinds_and_review">Rating</string>
    <string name="rating_button">Evaluați acest produs</string>
    <string name="book_sp">Părerea ta este importantă și utilă pentru noi și pentru alți utilizatori ai site-ului</string>
    <string name="book_author_deatils">Editura</string>
    <string name="book_isbn_deatils">ISBN</string>
    <string name="filter_title">Filtrează</string>
    <string name="filter_sort">Autori</string>
    <string name="filter_price">Preț</string>
    <string name="filter_rating">Rating</string>
    <string name="filter_type">Gen</string>
    <string name="filter_language">Limbă</string>
    <string name="filter_years">Ani</string>
    <string name="filter_button_cancel">Renunță</string>
    <string name="filter_button_apply">Aplică</string>
    <string name="book_favorite_title">Listă favorite</string>
    <string name="book_favorite_subtitle">Lista de favorite este goală.</string>
    <string name="book_favorite_description">Adaugă produse la favorite și noi te anunțăm când le scade prețul. Este atât de simplu!.</string>
    <string name="categories_text_no_data">Nu au fost identificate cărți disponibile.</string>
    <string name="payment_title">Coș de cumpărături</string>
    <string name="payment_title_order">Finalizare comandă</string>
    <string name="payment_subtitle">Coșul tău este gol.</string>
    <string name="payment_subtitle_t">Acum ești la un singur pas distanță de a te bucura de cărțile tale preferate!</string>
    <string name="payment_description">Descoperă cele mai avantajoase oferte și achiziționează într-un mod sigur.</string>
    <string name="payment_button_text">Finalizează comanda</string>
    <string name="payment_text">Vei găsi toate detaliile comenzii tale aici!</string>
    <string name="payment_transport">Modalitatea de transport: </string>
    <string name="payment_plata">Modalitatea de plată: </string>
    <string name="payment_modalitate">Suma totală de plată: </string>
    <string name="details_text">Detalii personale</string>
    <string name="edit_details_text">Editare date personale</string>
    <string name="language_text">Configurare limbă</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="about_us_text">Informații generale</string>
    <string name="sign_out_text">Deconectare</string>
    <string name="sign_out_message">Ești sigur că dorești să te deconectezi?</string>
    <string name="sign_out_answer_yes">Da</string>
    <string name="sign_out_answer_no">Anulare</string>
    <string name="lastname_text">Numele de familie</string>
    <string name="firstName_text">Prenumele</string>
    <string name="phone_number_text">Număr de telefon</string>
    <string name="user_details_date_of_join_text">Data înregistrării</string>
    <string name="save">Salvează modificările</string>
    <string name="language_description">Alegeți limba în care doriți să utilizați aplicația:</string>
    <string name="language_romana">Română</string>
    <string name="language_engleza">Engleză</string>
    <string name="language_franceza">Franceză</string>
    <string name="version_text">Version 1.0.0</string>
    <string name="welcome_in_app">Bine ai venit în aplicația noastră!</string>
    <string name="term_title">Te rugăm să citești cu atenție Termenii și Condițiile de utilizare a aplicației.</string>
    <string name="term_subtitle">Prin folosirea aplicației noastre, ești de acord să respecți și să fii angajat de acești termeni și condiții. Dacă nu ești de acord cu acești termeni și condiții, te rugăm să nu folosești aplicația.</string>
    <string name="term_one_title">Drepturi de proprietate intelectuală</string>
    <string name="term_one_text">Toate drepturile de proprietate intelectuală asupra aplicației noastre și a conținutului său (incluzând, dar nelimitându-se la text, imagini, logo-uri, design grafic etc.) sunt rezervate. Nu este permisă copierea, distribuirea, reproducerea sau utilizarea neautorizată a oricărui material din aplicație fără acordul scris al proprietarului.</string>
    <string name="term_two_title">Contul de utilizator</string>
    <string name="term_two_text">Pentru a beneficia în mod complet de funcționalitățile aplicației, este necesar să creezi un cont de utilizator. Ești responsabil pentru menținerea confidențialității datelor de conectare și pentru orice activitate care are loc în contul tău. Ne rezervăm dreptul de a suspenda sau închide contul tău în cazul în care există încălcări ale Termenilor și Condițiilor sau a politicilor noastre.</string>
    <string name="term_three_title">Informații personale</string>
    <string name="term_three_text">Colectăm și utilizăm informațiile personale în conformitate cu Politica noastră de Confidențialitate. Ne angajăm să protejăm confidențialitatea datelor tale personale și să le utilizăm doar în scopurile prevăzute de acești Termeni și Condiții și de lege.</string>
    <string name="term_four_title">Comenzi și Plăți</string>
    <string name="term_four_text">Prin utilizarea aplicației noastre, ai posibilitatea de a plasa comenzi pentru achiziționarea cărților disponibile în librăria noastră online. Prețurile afișate sunt în valută locală și pot varia în funcție de oferte și promoții. Plata comenzilor se va efectua conform metodelor de plată acceptate în aplicație.</string>
    <string name="term_five_title">Livrare și Retur</string>
    <string name="term_five_text">Ne străduim să livrăm comenzile în cel mai scurt timp posibil și să oferim produse de calitate. În cazul în care nu ești mulțumit de produsul primit, te rugăm să consulți politica noastră de retur și să urmezi pașii necesari pentru returnarea acestuia.</string>
    <string name="term_six_title">Limitarea responsabilității</string>
    <string name="term_six_text">Utilizarea aplicației se face pe propriul risc. Nu ne asumăm responsabilitatea pentru orice pierdere sau daune directe, indirecte, accidentale.</string>
    <string name="termination">Prin utilizarea aplicației noastre, ești de acord și angajat de Termenii și Condițiile de mai sus. Te rugăm să citești cu atenție acești termeni și condiții și să îi respecți în timpul utilizării aplicației. Dacă nu ești de acord cu acești termeni și condiții, te rugăm să nu utilizezi aplicația noastră.</string>
    <string name="termination_text">Mulțumim pentru utilizarea aplicației noastre și ne dorim să ai o experiență plăcută și satisfăcătoare!</string>
</resources>