<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_background">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <TextView
                    android:id="@+id/welcome"
                    style="@style/FB.16.Dark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_40"
                    android:text="@string/welcome_in_app"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:src="@drawable/ic_private_data"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/welcome" />

                <TextView
                    android:id="@+id/termsText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/term_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image" />

                <TextView
                    android:id="@+id/termsSubtext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/term_subtitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/termsText" />

                <TextView
                    android:id="@+id/numberOne"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:gravity="center"
                    android:text="1."
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/termsSubtext"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/term_one_title"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:gravity="start"
                    android:text="@string/term_one_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/numberOne"
                    app:layout_constraintTop_toBottomOf="@id/termsSubtext" />

                <TextView
                    android:id="@+id/term_one_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/term_one_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_one_title" />

                <TextView
                    android:id="@+id/numberTwo"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="2."
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_one_text"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/term_two_title"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:text="@string/term_two_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/numberTwo"
                    app:layout_constraintTop_toBottomOf="@id/term_one_text" />

                <TextView
                    android:id="@+id/term_two_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/term_two_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_two_title" />

                <TextView
                    android:id="@+id/munberThree"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="3."
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_two_text"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/term_three_title"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:text="@string/term_three_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/munberThree"
                    app:layout_constraintTop_toBottomOf="@id/term_two_text" />

                <TextView
                    android:id="@+id/term_three_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/term_three_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_three_title" />

                <TextView
                    android:id="@+id/numberFour"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="4."
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_three_text"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/term_four_title"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:text="@string/term_four_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/numberFour"
                    app:layout_constraintTop_toBottomOf="@id/term_three_text" />

                <TextView
                    android:id="@+id/term_four_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/term_four_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_four_title" />


                <TextView
                    android:id="@+id/numberFive"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="5."
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_four_text"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/term_five_title"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:text="@string/term_five_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/numberFive"
                    app:layout_constraintTop_toBottomOf="@id/term_four_text" />

                <TextView
                    android:id="@+id/term_five_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/term_five_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_five_title" />

                <TextView
                    android:id="@+id/numberSix"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="6."
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_five_text"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/term_six_title"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:text="@string/term_six_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/numberSix"
                    app:layout_constraintTop_toBottomOf="@id/term_five_text" />

                <TextView
                    android:id="@+id/term_six_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/term_six_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_six_title" />

                <TextView
                    android:id="@+id/termination"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/termination"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_six_text" />

                <TextView
                    android:id="@+id/termination_text"
                    style="@style/FB.14.GrayscaleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_110"
                    android:text="@string/termination_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/termination" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>